Fix icons not showing and hover function on sidebar

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -176,6 +176,10 @@ aside {
   flex-shrink: 0;
 }
 
+.side-bar > dl > button:hover {
+  background-color: rgba(255, 255, 255, 0.112);
+}
+
 .recommended-content {
   width: 100%;
   overflow: hidden;
@@ -239,7 +243,6 @@ aside {
 
 .video-title {
   color: #fff;
-  font-size: 16px;
   margin-bottom: 2px;
   font-size: 14px;
   font-weight: 600;
